
- GD:
  . Fixed bug #66387 (Stack overflow with imagefilltoborder) (CVE-2015-8874).
    (cmb)
  . Fixed bug #72298 (pass2_no_dither out-of-bounds access). (Stas)
  . Fixed bug #72339 (Integer Overflow in _gd2GetHeader() resulting in 
    heap overflow). (Pierre)
  . Fixed bug #72407 (NULL Pointer Dereference at _gdScaleVert). (Stas)

- mbstring:
   . Fixed bug #72402 (_php_mb_regex_ereg_replace_exec - double free). (Stas)

- mcrypt:
   . Fixed bug #72455 (Heap Overflow due to integer overflows). (Stas)

- SPL:
  . Fixed bug #72340 (int/size_t confusion in SplFileObject::fread). (Stas)
  . Fixed bug #72433 (Use After Free Vulnerability in PHP's GC algorithm and
    unserialize). (Dmitry)

- WDDX:
  . Fixed bug #72298 (Double Free Courruption in wddx_deserialize). (Stas)

- zip:
  . Fixed bug #72434 (ZipArchive class Use After Free Vulnerability in PHP's GC
    algorithm and unserialize). (Dmitry)

26 May 2016, PHP 5.5.36

- Core:
  . Fixed bug #72114 (Integer underflow / arbitrary null write in
    fread/gzread). (Stas)
  . Fixed bug #72135 (Integer Overflow in php_html_entities). (Stas)

- GD:
   . Fixed bug #72227 (imagescale out-of-bounds read). (Stas)

- Intl:
   . Fixed bug #72241 (get_icu_value_internal out-of-bounds read). (Stas)

- Phar:
  . Fixed bug #71331 (Uninitialized pointer in phar_make_dirstream()).
    (CVE-2016-4343) (Stas)

28 Apr 2016, PHP 5.5.35

- BCMath:
  . Fixed bug #72093 (bcpowmod accepts negative scale and corrupts _one_
    definition). (Stas)

- Exif:
  . Fixed bug #72094 (Out of bounds heap read access in exif header
    processing). (Stas)

- GD:
  . Fixed bug #71912 (libgd: signedness vulnerability) (CVE-2016-3074). (Stas)

- Intl:
  . Fixed bug #72061 (Out-of-bounds reads in zif_grapheme_stripos with negative
    offset). (Stas)

- XML:
   . Fixed bug #72099 (xml_parse_into_struct segmentation fault). (Stas)

31 Mar 2016, PHP 5.5.34

- Fileinfo:
  . Fixed bug #71527 (Buffer over-write in finfo_open with malformed magic